2323: Use stream-bearing methods of java.nio.file.Files correctly
Reviewed-by: erikj